# mt-lr-morphology

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
data/: 20250401-dataset-updated.xlsx  abstracts.xlsx  dataset-updated.xlsx  languages.xlsx  murilo_titles.csv  scopus.xlsx  test_output_results_gpt-4o-mini.csv
data/categories/: limit_n=10_text_answers_gpt-4o-mini.csv  limit_n=30_text_answers_gpt-4o-mini.csv  limit_n=30_text_answers_gpt-4o.csv
data/dataset/: dataset-updated.xlsx
data/extracted_data/: abstracts.xlsx
data/generated_answers/: limit_n=10_text_answers_gpt-4o-mini.csv  limit_n=2_text_answers_gpt-4o-mini.csv  limit_n=30_text_answers_gpt-4o.csv  murilo_tagged_answers.csv  output_results_gpt-4o.csv  paper_answers.csv  test_output_results_gpt-4o-mini.csv
gpt/: cli.py  config.py
gpt/categorization/: __init__.py  categorize.py  generate_answers.py  prompt.py  workflow.py
gpt/preprocessing/: __init__.py  extract_abstracts.py
notebooks/: 20250329-mg-categorization.ipynb  20250329-mg-extract-abstracts.ipynb  20250329-mg-gpt-workflow.ipynb  20250401-mg-categorize.ipynb  20250401-rt-data-analysis.ipynb  20250401-rt-dataset-updated.ipynb  20250402-mg-full-text.ipynb  20250427-mg-tagging.ipynb
