[project]
name = "gpt"
version = "0.1.1"
authors = [{ name = "Murilo Gustineli", email = "murilogustineli@gatech.edu" }]
description = "GPT Sandbox helper package"
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/murilogustineli/mt-lr-morphology"
Issues = "https://github.com/murilogustineli/mt-lr-morphology/issues"

[project.scripts]
gpt = "gpt.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

[tool.setuptools.packages.find]
where = ["."]
include = ["gpt*"]
namespaces = false
