[project]
name = "gpt"
version = "0.1.1"
authors = [{ name = "Murilo Gustineli", email = "murilogustineli@gatech.edu" }]
description = "GPT helper package for morphological analysis"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openai",
    "numpy",
    "pandas",
    "matplotlib",
    "typer",
    "python-dotenv",
    "requests",
    "openpyxl",
    "ipykernel>=6.29.5",
]

[project.optional-dependencies]
dev = [
    "jupyterlab",
    "ipywidgets",
    "ipykernel",
    "ruff",
    "pre-commit",
    "pytest",
]

[project.urls]
Homepage = "https://github.com/murilogustineli/mt-lr-morphology"
Issues = "https://github.com/murilogustineli/mt-lr-morphology/issues"

[project.scripts]
gpt = "gpt.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["gpt*"]
namespaces = false
